23.0.2/Solution Exports/Business Automation Workflow/StudioEgress_NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deploytool-studio-egress-allow-all
  namespace: cp4ba-starter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: $$(cp4baClusterName)$$
      statefulset.kubernetes.io/pod-name: $$(cp4baClusterName)$$-bastudio-deployment-0
  policyTypes:
    - Egress
  egress:
    - {}
